@@ -48,7 +48,7 @@ public class CountryService {
 
     public static Stream<Country> toCountryStream(String... isoCodes) {
         return Stream.of(isoCodes)
-                .map(isoCode -> new Locale("", isoCode))
+                .map(isoCode -> Locale.of("", isoCode))
                 .map(CountryService::toCountry);
     }
 
@@ -71,58 +71,58 @@ public class CountryService {
 
         locales.add(CountryService.toCountry(Locale.US));
         locales.add(CountryService.toCountry(Locale.UK));
-        locales.add(CountryService.toCountry(new Locale("en", "AU")));
+        locales.add(CountryService.toCountry(Locale.of("en", "AU")));
         locales.add(CountryService.toCountry(Locale.FRANCE));
         locales.add(CountryService.toCountry(Locale.GERMANY));
-        locales.add(CountryService.toCountry(new Locale("de", "AT")));
-        locales.add(CountryService.toCountry(new Locale("de", "CH")));
+        locales.add(CountryService.toCountry(Locale.of("de", "AT")));
+        locales.add(CountryService.toCountry(Locale.of("de", "CH")));
         locales.add(CountryService.toCountry(Locale.ITALY));
         locales.add(CountryService.toCountry(Locale.KOREA));
-        locales.add(CountryService.toCountry(new Locale("es", "ES")));
-        locales.add(CountryService.toCountry(new Locale("ca", "ES")));
-        locales.add(CountryService.toCountry(new Locale("nl", "NL")));
-        locales.add(CountryService.toCountry(new Locale("pt", "BR")));
-        locales.add(CountryService.toCountry(new Locale("pt", "PT")));
-        locales.add(CountryService.toCountry(new Locale("ar", "SA"), true));
-        locales.add(CountryService.toCountry(new Locale("ar", "TN"), true));
-        locales.add(CountryService.toCountry(new Locale("bg", "BG")));
-        locales.add(CountryService.toCountry(new Locale("bn", "BD")));
-        locales.add(CountryService.toCountry(new Locale("bs", "BA")));
-        locales.add(CountryService.toCountry(new Locale("cs", "CZ")));
-        locales.add(CountryService.toCountry(new Locale("el", "GR")));
-        locales.add(CountryService.toCountry(new Locale("et", "EE")));
-        locales.add(CountryService.toCountry(new Locale("fa", "IR"), true));
-        locales.add(CountryService.toCountry(new Locale("fi", "FI")));
-        locales.add(CountryService.toCountry(new Locale("da", "DK")));
-        locales.add(CountryService.toCountry(new Locale("hi", "IN")));
-        locales.add(CountryService.toCountry(new Locale("in", "ID")));
-        locales.add(CountryService.toCountry(new Locale("is", "IS")));
-        locales.add(CountryService.toCountry(new Locale("hr", "HR")));
-        locales.add(CountryService.toCountry(new Locale("ja", "JP")));
-        locales.add(CountryService.toCountry(new Locale("hu", "HU")));
-        locales.add(CountryService.toCountry(new Locale("he", "IL"), true));
-        locales.add(CountryService.toCountry(new Locale("ka", "GE")));
-        locales.add(CountryService.toCountry(new Locale("ckb", "IQ"), true));
-        locales.add(CountryService.toCountry(new Locale("km", "KH")));
-        locales.add(CountryService.toCountry(new Locale("ky", "KG")));
-        locales.add(CountryService.toCountry(new Locale("kk", "KZ")));
-        locales.add(CountryService.toCountry(new Locale("lt", "LT")));
-        locales.add(CountryService.toCountry(new Locale("lv", "LV")));
-        locales.add(CountryService.toCountry(new Locale("ms", "MY")));
-        locales.add(CountryService.toCountry(new Locale("no", "NO")));
-        locales.add(CountryService.toCountry(new Locale("pl", "PL")));
-        locales.add(CountryService.toCountry(new Locale("ro", "RO")));
-        locales.add(CountryService.toCountry(new Locale("ru", "RU")));
-        locales.add(CountryService.toCountry(new Locale("sk", "SK")));
-        locales.add(CountryService.toCountry(new Locale("sl", "SI")));
-        locales.add(CountryService.toCountry(new Locale("sr", "BA")));
-        locales.add(CountryService.toCountry(new Locale("sr", "RS")));
-        locales.add(CountryService.toCountry(new Locale("sv", "SE")));
-        locales.add(CountryService.toCountry(new Locale("th", "TH")));
-        locales.add(CountryService.toCountry(new Locale("tr", "TR")));
-        locales.add(CountryService.toCountry(new Locale("uk", "UA")));
-        locales.add(CountryService.toCountry(new Locale("uz", "UZ")));
-        locales.add(CountryService.toCountry(new Locale("vi", "VN")));
+        locales.add(CountryService.toCountry(Locale.of("es", "ES")));
+        locales.add(CountryService.toCountry(Locale.of("ca", "ES")));
+        locales.add(CountryService.toCountry(Locale.of("nl", "NL")));
+        locales.add(CountryService.toCountry(Locale.of("pt", "BR")));
+        locales.add(CountryService.toCountry(Locale.of("pt", "PT")));
+        locales.add(CountryService.toCountry(Locale.of("ar", "SA"), true));
+        locales.add(CountryService.toCountry(Locale.of("ar", "TN"), true));
+        locales.add(CountryService.toCountry(Locale.of("bg", "BG")));
+        locales.add(CountryService.toCountry(Locale.of("bn", "BD")));
+        locales.add(CountryService.toCountry(Locale.of("bs", "BA")));
+        locales.add(CountryService.toCountry(Locale.of("cs", "CZ")));
+        locales.add(CountryService.toCountry(Locale.of("el", "GR")));
+        locales.add(CountryService.toCountry(Locale.of("et", "EE")));
+        locales.add(CountryService.toCountry(Locale.of("fa", "IR"), true));
+        locales.add(CountryService.toCountry(Locale.of("fi", "FI")));
+        locales.add(CountryService.toCountry(Locale.of("da", "DK")));
+        locales.add(CountryService.toCountry(Locale.of("hi", "IN")));
+        locales.add(CountryService.toCountry(Locale.of("in", "ID")));
+        locales.add(CountryService.toCountry(Locale.of("is", "IS")));
+        locales.add(CountryService.toCountry(Locale.of("hr", "HR")));
+        locales.add(CountryService.toCountry(Locale.of("ja", "JP")));
+        locales.add(CountryService.toCountry(Locale.of("hu", "HU")));
+        locales.add(CountryService.toCountry(Locale.of("he", "IL"), true));
+        locales.add(CountryService.toCountry(Locale.of("ka", "GE")));
+        locales.add(CountryService.toCountry(Locale.of("ckb", "IQ"), true));
+        locales.add(CountryService.toCountry(Locale.of("km", "KH")));
+        locales.add(CountryService.toCountry(Locale.of("ky", "KG")));
+        locales.add(CountryService.toCountry(Locale.of("kk", "KZ")));
+        locales.add(CountryService.toCountry(Locale.of("lt", "LT")));
+        locales.add(CountryService.toCountry(Locale.of("lv", "LV")));
+        locales.add(CountryService.toCountry(Locale.of("ms", "MY")));
+        locales.add(CountryService.toCountry(Locale.of("no", "NO")));
+        locales.add(CountryService.toCountry(Locale.of("pl", "PL")));
+        locales.add(CountryService.toCountry(Locale.of("ro", "RO")));
+        locales.add(CountryService.toCountry(Locale.of("ru", "RU")));
+        locales.add(CountryService.toCountry(Locale.of("sk", "SK")));
+        locales.add(CountryService.toCountry(Locale.of("sl", "SI")));
+        locales.add(CountryService.toCountry(Locale.of("sr", "BA")));
+        locales.add(CountryService.toCountry(Locale.of("sr", "RS")));
+        locales.add(CountryService.toCountry(Locale.of("sv", "SE")));
+        locales.add(CountryService.toCountry(Locale.of("th", "TH")));
+        locales.add(CountryService.toCountry(Locale.of("tr", "TR")));
+        locales.add(CountryService.toCountry(Locale.of("uk", "UA")));
+        locales.add(CountryService.toCountry(Locale.of("uz", "UZ")));
+        locales.add(CountryService.toCountry(Locale.of("vi", "VN")));
         locales.add(CountryService.toCountry(Locale.SIMPLIFIED_CHINESE));
         locales.add(CountryService.toCountry(Locale.TRADITIONAL_CHINESE));
     }
